--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-image": "^2.2.2",
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^3.0.17",
